# finance-assistant

./: .gitignore  .gitlab-ci.yml  Dockerfile  README.md  Use case for admin.drawio  docker-compose.yml  pyproject.toml  Диаграмма без названия.drawio
app/: main.py
app/api/v1/: advice.py  analytics.py  auth.py  categories.py  expenses.py  health.py  receipts.py
app/core/: config.py  jwt.py  logging_config.py
app/db/: models.py  psycopg.py
app/db/sql/: 001_create_tables.sql  002_email_codes.sql  003_refresh_tokens.sql
app/schemas/: auth.py  user.py
app/utils/: security.py
