[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "karachunYaraslau",email = "karacuna396@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard] (>=0.116.2,<0.117.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
